[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/HUD/OrbBG.jpg" type="Texture" id=1]
[ext_resource path="res://HUD/BWTheme.tres" type="Theme" id=2]
[ext_resource path="res://OptionsScreen.gd" type="Script" id=3]
[ext_resource path="res://HUD/Button.tres" type="Theme" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Computer Speak v0.3.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
TabContainer/fonts/font = SubResource( 2 )

[sub_resource type="Theme" id=4]

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -679.0
margin_top = -455.0
margin_right = 680.0
margin_bottom = 444.0
theme = SubResource( 3 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 86.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
margin_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings/HBoxContainer"]
margin_left = 468.0
margin_right = 758.0
margin_bottom = 767.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Settings/HBoxContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 51.0
theme = ExtResource( 2 )
text = "Borderless Window"
align = 2
valign = 3

[node name="Label2" type="Label" parent="TabContainer/Settings/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 290.0
margin_bottom = 106.0
theme = ExtResource( 2 )
text = "Full SCreen"
align = 2
valign = 3

[node name="Label5" type="Label" parent="TabContainer/Settings/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 290.0
margin_bottom = 161.0
theme = ExtResource( 2 )
text = "Gameplay"
align = 2
valign = 3

[node name="Label3" type="Label" parent="TabContainer/Settings/HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 290.0
margin_bottom = 216.0
theme = ExtResource( 2 )
text = "Music Volume"
align = 2
valign = 3

[node name="Label4" type="Label" parent="TabContainer/Settings/HBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 290.0
margin_bottom = 271.0
theme = ExtResource( 2 )
text = "Sound Volume"
align = 2
valign = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Settings/HBoxContainer"]
margin_left = 762.0
margin_right = 882.0
margin_bottom = 767.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderlessWindow" type="CheckButton" parent="TabContainer/Settings/HBoxContainer/VBoxContainer2"]
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 51 )
theme = SubResource( 4 )

[node name="FullScreen" type="CheckButton" parent="TabContainer/Settings/HBoxContainer/VBoxContainer2"]
margin_top = 55.0
margin_right = 120.0
margin_bottom = 106.0
rect_min_size = Vector2( 120, 51 )
rect_pivot_offset = Vector2( 60, 0 )
theme = SubResource( 4 )

[node name="Gameplay" type="CheckButton" parent="TabContainer/Settings/HBoxContainer/VBoxContainer2"]
margin_top = 110.0
margin_right = 120.0
margin_bottom = 161.0
rect_min_size = Vector2( 120, 51 )
rect_pivot_offset = Vector2( 60, 0 )
theme = SubResource( 4 )
disabled = true

[node name="MusicVolume" type="HSlider" parent="TabContainer/Settings/HBoxContainer/VBoxContainer2"]
margin_top = 165.0
margin_right = 120.0
margin_bottom = 216.0
rect_min_size = Vector2( 120, 51 )

[node name="SoundVolume" type="HSlider" parent="TabContainer/Settings/HBoxContainer/VBoxContainer2"]
margin_top = 220.0
margin_right = 120.0
margin_bottom = 271.0
rect_min_size = Vector2( 120, 51 )

[node name="Controls" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 86.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls0" type="VBoxContainer" parent="TabContainer/Controls/HBoxContainer"]
margin_left = 586.0
margin_right = 586.0
margin_bottom = 809.0

[node name="Controls1" type="VBoxContainer" parent="TabContainer/Controls/HBoxContainer"]
margin_left = 590.0
margin_right = 590.0
margin_bottom = 809.0

[node name="Controls2" type="VBoxContainer" parent="TabContainer/Controls/HBoxContainer"]
margin_left = 594.0
margin_right = 594.0
margin_bottom = 809.0

[node name="Controls3" type="VBoxContainer" parent="TabContainer/Controls/HBoxContainer"]
margin_left = 598.0
margin_right = 598.0
margin_bottom = 809.0

[node name="Controls4" type="VBoxContainer" parent="TabContainer/Controls/HBoxContainer"]
margin_left = 602.0
margin_right = 602.0
margin_bottom = 809.0

[node name="Controls5" type="VBoxContainer" parent="TabContainer/Controls/HBoxContainer"]
margin_left = 606.0
margin_right = 764.0
margin_bottom = 809.0

[node name="ToggleEquip" type="CheckButton" parent="TabContainer/Controls/HBoxContainer/Controls5"]
margin_right = 158.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
hint_tooltip = "When enabled, you can press the \"Toggle Equip\" input once to equip
different Mayhem Abilities,then press it again to switch back to Weapons."
theme = ExtResource( 4 )

[node name="ToggleCrouch" type="CheckButton" parent="TabContainer/Controls/HBoxContainer/Controls5"]
margin_top = 64.0
margin_right = 158.0
margin_bottom = 124.0
rect_min_size = Vector2( 100, 60 )
hint_tooltip = "When enabled, you can press the \"Crouch\" input once to crouch,
then press it again to stand back up."
theme = ExtResource( 4 )

[node name="ToggleDrag" type="CheckButton" parent="TabContainer/Controls/HBoxContainer/Controls5"]
margin_top = 128.0
margin_right = 158.0
margin_bottom = 188.0
rect_min_size = Vector2( 100, 60 )
hint_tooltip = "When disabled, you can click an item in your inventory
or a container, then click elsewhere to move it."
theme = ExtResource( 4 )

[node name="MouseSensitivity" type="SpinBox" parent="TabContainer/Controls/HBoxContainer/Controls5"]
margin_top = 192.0
margin_right = 158.0
margin_bottom = 252.0
rect_min_size = Vector2( 100, 60 )
hint_tooltip = "Controls mouse sensitivity for weapon aiming."
theme = ExtResource( 4 )
min_value = 0.05
max_value = 5.0
step = 0.05
value = 0.05
align = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="TabContainer/Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = -113.5
margin_right = 178.5
margin_bottom = 113.5
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "New Control"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -252.0
margin_top = -71.0
theme = ExtResource( 4 )
text = "SAVE CHANGES"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="TabContainer/Controls/HBoxContainer/Controls5/ToggleEquip" to="." method="_on_ToggleEquip_toggled"]
[connection signal="toggled" from="TabContainer/Controls/HBoxContainer/Controls5/ToggleCrouch" to="." method="_on_ToggleCrouch_toggled"]
[connection signal="toggled" from="TabContainer/Controls/HBoxContainer/Controls5/ToggleDrag" to="." method="_on_ToggleDrag_toggled"]
[connection signal="value_changed" from="TabContainer/Controls/HBoxContainer/Controls5/MouseSensitivity" to="." method="_on_MouseSensitivity_value_changed"]
[connection signal="confirmed" from="TabContainer/Controls/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
